# my-dbms-project

./: .~lock.Online Retail.csv#  Own_Readme.md  README.md  hypopg_advisor_candidates.jsonl  online_retail_small.csv  queries.sql  queries2.sql
contrib/: Makefile  meson.build
contrib/auto_index_advisor/: Makefile  auto_index_advisor--1.0--1.1.sql  auto_index_advisor--1.0.sql  auto_index_advisor--1.1.sql  auto_index_advisor.c  auto_index_advisor.control  meson.build
scripts/: hypopg_index_advisor.py
src/backend/executor/: execMain.c  nodeSeqscan.c
src/backend/optimizer/path/: allpaths.c
src/backend/optimizer/plan/: planner.c
src/backend/utils/misc/: Makefile  auto_indexer.c
src/include/utils/: auto_indexer.h
